--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/sidntrivedi012/Holmes/issues"
   },
-  "homepage": "https://github.com/sidntrivedi012/Holmes#readme"
+  "homepage": "https://github.com/sidntrivedi012/Holmes#readme",
+  "dependencies": {
+    "irc": "^0.5.2",
+    "nodemon": "^1.19.1"
+  }
 }
