--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/sidntrivedi012/Holmes#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "irc": "^0.5.2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
