--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sidntrivedi012/Holmes#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "irc": "^0.5.2",
     "nodemon": "^1.19.1",
