--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "irc": "^0.5.2",
+    "node-schedule": "^1.3.2",
     "nodemon": "^1.19.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
